[tool.poetry]
name = "sunriseCES"
version = "0.0.2"
description = "Outils d'inférence de paramètres pour thermique de bâtiments"
authors = ["Voir GitHub"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://sites.google.com/view/2019-2020-gr12/home"
repository = "https://github.com/18tbr/sunrise-refonte"
keywords = ["sunrise", "machine-learning", "thermal", "modelisation-verification", "mines-de-paris"]
packages = [
    { include = "sunrise.py" },
    { include = "src" },
]
exclude = ["src/README.md"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: French",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.scripts]
sunrise = "sunrise:lancement_interface_graphique"

[tool.poetry.dependencies]
python = "^3.7"
keras = "^2.3.1"
matplotlib = "^3.2.1"
numpy = "^1.18.3"
scipy = "^1.4.1"
tensorflow = "^2.2.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.1"
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
